# Supply_Chain

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/rating_backend/: Cargo.toml  rating_backend.did
src/rating_backend/src/: lib.rs
src/reporting_backend/: Cargo.toml  reporting_backend.did
src/reporting_backend/src/: lib.rs
src/supply_chain_backend/: Cargo.toml  supply_chain_backend.did
src/supply_chain_backend/src/: lib.rs
src/supply_chain_frontend/: index.html  package.json
src/supply_chain_frontend/src/: App.jsx  index.scss  main.jsx
src/supply_chain_frontend/src/components/: Dashboard.jsx  Ratings.jsx  Reports.jsx  Retailers.jsx  Suppliers.jsx  TaskManagement.jsx  Transporters.jsx  UserRegistration.jsx  Warehouses.jsx
src/supply_chain_frontend/src/services/: AuthService.js
src/suppy_chain_backend/: Cargo.toml  suppy_chain_backend.did
src/suppy_chain_backend/src/: lib.rs
src/suppy_chain_frontend/: index.html  package.json  tailwind.config.js
src/suppy_chain_frontend/src/: App.jsx  index.scss  main.jsx
src/suppy_chain_frontend/src/components/: Layout.jsx  RoleDashboard.jsx
src/suppy_chain_frontend/src/pages/: Consumer.jsx  Dashboard.jsx  FrontPage.jsx  Home.jsx  LoginPage.jsx  Retailer.jsx  Supplier.jsx  Transporter.jsx  dashboard.jsx  login.jsx  register.jsx  setting.jsx
src/user_management_backend/: Cargo.toml  user_management_backend.did
src/user_management_backend/src/: lib.rs
